--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -3,18 +3,59 @@
 body {
     background-color: gainsboro;
     margin: 0%;
+    height: 100%;
+    width: 100%;
 }
 
 nav {
-    background-color: rgb(255, 185, 56);
-    padding: 1.5%;
+    background-color: rgb(32, 32, 32);
+    padding: 1%;
 }
 
 h1 {
     color: royalblue;
 }
 
-#content {
-    padding-left: 2%;
-    padding-right: 2%;
+h2 {
+    color: white;
+    /* text-align: center; */
+}
+
+p {
+    color: white;
+}
+
+div.rowContent {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: ... */
+}
+
+div.colContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#leftColumn {
+    background-color: rgb(82, 82, 82);
+    width: 18%;
+    margin: 0.5%;
+    padding: 1%;
+}
+
+#rightColumn {
+    background-color: rgb(194, 194, 194);
+    width: 80%;
+}
+
+.box {
+    background-color: rgb(50, 61, 112);
+    margin: 0.5%;
+    padding: 2%;
+}
+
+.mainImg {
+    background-color: lightgrey;
+    padding: 0.25%;
 }
